# SatView

./: .gitignore  README.md  build.gradle  flake.nix  pyproject.toml  requirements.txt  shell.nix
.bloop/: OOFP-Tetris-2024-test.json  OOFP-Tetris-2024.json
.metals/: metals.lock.db  metals.mv.db
.metals/.reports/metals-full/2024-09-21/: r_compiler-error_(OOFP-Tetris-2024-test)_15-55-58-949.md
.metals/.reports/metals-full/2024-09-29/: r_compiler-error_(OOFP-Tetris-2024)_17-48-39-497.md  r_compiler-error_(OOFP-Tetris-2024)_18-25-48-397.md  r_compiler-error_(OOFP-Tetris-2024)_18-25-49-075.md  r_compiler-error_(OOFP-Tetris-2024)_18-25-50-317.md  r_compiler-error_(OOFP-Tetris-2024)_18-28-25-811.md  r_compiler-error_(OOFP-Tetris-2024)_18-30-13-251.md  r_compiler-error_(OOFP-Tetris-2024)_18-50-25-290.md  r_compiler-error_(OOFP-Tetris-2024)_18-50-26-246.md  r_compiler-error_(OOFP-Tetris-2024)_18-50-27-071.md  r_compiler-error_(OOFP-Tetris-2024)_19-55-15-995.md  r_compiler-error_(OOFP-Tetris-2024)_19-55-18-740.md  r_compiler-error_(OOFP-Tetris-2024)_19-55-27-312.md  r_compiler-error_(OOFP-Tetris-2024)_20-28-28-186.md  r_compiler-error_(OOFP-Tetris-2024)_20-28-53-205.md  r_compiler-error_(OOFP-Tetris-2024)_20-28-53-370.md  r_compiler-error_(OOFP-Tetris-2024)_20-30-21-202.md  r_compiler-error_(OOFP-Tetris-2024-test)_20-11-44-683.md
.metals/.reports/metals-full/2024-09-30/: r_compiler-error_(OOFP-Tetris-2024-test)_15-48-11-409.md
src/: __main__.py  main.py
src/tetris/logic/: GameState.scala  Point.scala  TetrisLogic.scala  Tetronimo.scala
(+19 files in other folders)
