[tool.poetry]
name = "Satview"
version = "1.0"
description = "Satellite trajectory viewer"
authors = ["Haileselassie Gaspar <h.gaspar@proton.me>"]
readme = "README.md"
license = "MIT"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.4"
sgp4 = "^2.25"
matplotlib = "^3.10.7"
pandas = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
